--- a/main.css
+++ b/main.css
@@ -68,3 +68,13 @@ div.ui.massive.horizontal.divided.list > div.item > div.description {
 .item {
     text-align: center;
 }
+
+#priceSum {
+    background: #ff9966;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #ff5e62, #ff9966);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #ff5e62, #ff9966); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    color: white;
+    text-align:center;
+    width: 100%;
+    line-height: 200%;
+}
